--- a/css/style.production.css
+++ b/css/style.production.css
@@ -4,21 +4,6 @@ Primary Color (Purple): #357b70;
 Secondary Color (Orange): #e0b354;
 Text Color (Dark Gray): #2b2b2b;
 */
-:root {
-  --primary-color: #357b70;
-  --secondary-color: #e0b354;
-  --text-color: #2B2B2B;
-  --h1-font-size: 30px;
-  --h2-font-size: 24px;
-  --h3-font-size: 24px;
-  --margin: 10px;
-  --padding: 10px;
-  --font-weight: 400;
-  --h-font-weight: 700;
-  --font-size: 16px;
-  --opacity: 0.8;
-  --line-height: 1.6;
-}
 
 * {
   -webkit-box-sizing: border-box;
@@ -27,24 +12,38 @@ Text Color (Dark Gray): #2b2b2b;
 
 body {
   font-family: 'Lato', sans-serif;
-  font-weight: var(--font-weight);
-  font-size: var(--font-size);
-  line-height: var(--line-height);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  width: 100%;
 }
 
 h1 {
-  font-size: var(--h1-font-size);
-  font-weight: var(--h-font-weight);
+  font-size: 30px;
+  font-weight: 700;
 }
 
 h2 {
-  font-size: var(--h2-font-size);
-  font-weight: var(--h-font-weight);
+  font-size: 24px;
+  font-weight: 700;
 }
 
 h3 {
-  font-size: var(--h3-font-size);
-  font-weight: var(--h-font-weight);
+  font-size: 24px;
+  font-weight: 700;
+}
+
+body {
+  text-align: center;
+}
+
+div {
+  text-align: left;
+}
+
+.centeredtable {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .profile__text {
@@ -53,7 +52,6 @@ h3 {
           flex: 1 1 100px;
 }
 
-/* Styling Header*/
 .page-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -106,7 +104,7 @@ h3 {
   margin-left: 15px;
 }
 
-/* Styling CSS Grid*/
+/* Styling CSS Grid */
 .grid {
   display: -ms-grid;
   display: grid;
@@ -117,8 +115,7 @@ h3 {
 
 .grid__item {
   background-color: Lightgrey;
-  padding: var(--padding);
-  /* Set width to auto*/
+  padding: 10px;
   width: auto;
 }
 
@@ -130,7 +127,7 @@ h3 {
   grid-row: 1 / 3;
 }
 
-/* Grid fallback*/
+/* Grid fallback */
 .grid__item {
   display: inline-block;
   width: auto;
@@ -138,10 +135,11 @@ h3 {
 
 /* Styling Links */
 a:visited {
-  color: #FD3C5D;
+  color: #fd3c5d;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
 }
 
@@ -153,7 +151,7 @@ a:active {
 button {
   border: none;
   font-family: inherit;
-  background-color: #486C96;
+  background-color: #486c96;
   color: white;
   text-decoration: none;
   padding: 17px;
@@ -161,17 +159,22 @@ button {
   border-bottom: 7px solid rgba(0, 0, 0, 0.3);
 }
 
-button:hover, button:focus {
+button:hover {
   cursor: pointer;
-  opacity: var(--opacity);
+  opacity: 0.8;
+}
+
+button:focus {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .button__secondary {
   background-color: #e0b354;
-  color: var(--text-color);
+  color: #2b2b2b;
 }
 
-/* Styling Footer*/
+/* Styling Footer */
 .page-footer {
   clear: both;
   display: -webkit-box;
@@ -184,7 +187,7 @@ button:hover, button:focus {
   text-align: center;
 }
 
-/* Media Queries*/
+/* Media Queries */
 @media all and (max-width: 500px) {
   .grid {
     -ms-grid-columns: 1fr;
@@ -215,20 +218,98 @@ button:hover, button:focus {
 }
 
 /* Button new Advanced */
-button,
-.button1,
-.button2,
-.button3,
-.my-input {}
-
-.button, button {
+button {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: var(--primary-color);
+  background-color: #357b70;
   color: white;
   text-decoration: none;
-  padding: var(--padding);
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
+}
+.button1 {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #357b70;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
+}
+.button2 {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #357b70;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
+}
+.button3 {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #357b70;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
+}
+.my-input {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #357b70;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
+}
+.button {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #357b70;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
+}
+.button {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #357b70;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: 0.2s opacity;
@@ -236,12 +317,24 @@ button,
   transition: 0.2s opacity;
 }
 
-button:hover,
-button:focus,
-.button:hover,
+button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+button:focus {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
 .button:focus {
   cursor: pointer;
-  opacity: var(--opacity);
+  opacity: 0.8;
 }
 
 @-webkit-keyframes color-change {
