--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
   font-weight: var(--font-weight);
   font-size: var(--font-size);
   line-height: var(--line-height);
+  width: 100%;
 }
 
 h1 {
@@ -44,6 +45,19 @@ h2 {
 h3 {
   font-size: var(--h3-font-size);
   font-weight: var(--h-font-weight);
+}
+
+body {
+  text-align: center;
+}
+
+div {
+  text-align: left;
+}
+
+.centeredtable {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .profile__text {
