--- a/css/style.production.css
+++ b/css/style.production.css
@@ -4,6 +4,21 @@ Primary Color (Purple): #357b70;
 Secondary Color (Orange): #e0b354;
 Text Color (Dark Gray): #2b2b2b;
 */
+:root {
+  --primary-color: #357b70;
+  --secondary-color: #e0b354;
+  --text-color: #2B2B2B;
+  --h1-font-size: 30px;
+  --h2-font-size: 24px;
+  --h3-font-size: 24px;
+  --margin: 10px;
+  --padding: 10px;
+  --font-weight: 400;
+  --h-font-weight: 700;
+  --font-size: 16px;
+  --opacity: 0.8;
+  --line-height: 1.6;
+}
 
 * {
   -webkit-box-sizing: border-box;
@@ -12,38 +27,24 @@ Text Color (Dark Gray): #2b2b2b;
 
 body {
   font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.6;
-  width: 100%;
+  font-weight: var(--font-weight);
+  font-size: var(--font-size);
+  line-height: var(--line-height);
 }
 
 h1 {
-  font-size: 30px;
-  font-weight: 700;
+  font-size: var(--h1-font-size);
+  font-weight: var(--h-font-weight);
 }
 
 h2 {
-  font-size: 24px;
-  font-weight: 700;
+  font-size: var(--h2-font-size);
+  font-weight: var(--h-font-weight);
 }
 
 h3 {
-  font-size: 24px;
-  font-weight: 700;
-}
-
-body {
-  text-align: center;
-}
-
-div {
-  text-align: left;
-}
-
-.centeredtable {
-  margin-left: auto;
-  margin-right: auto;
+  font-size: var(--h3-font-size);
+  font-weight: var(--h-font-weight);
 }
 
 .profile__text {
@@ -52,6 +53,7 @@ div {
           flex: 1 1 100px;
 }
 
+/* Styling Header*/
 .page-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -104,7 +106,7 @@ div {
   margin-left: 15px;
 }
 
-/* Styling CSS Grid */
+/* Styling CSS Grid*/
 .grid {
   display: -ms-grid;
   display: grid;
@@ -115,7 +117,8 @@ div {
 
 .grid__item {
   background-color: Lightgrey;
-  padding: 10px;
+  padding: var(--padding);
+  /* Set width to auto*/
   width: auto;
 }
 
@@ -127,7 +130,7 @@ div {
   grid-row: 1 / 3;
 }
 
-/* Grid fallback */
+/* Grid fallback*/
 .grid__item {
   display: inline-block;
   width: auto;
@@ -135,11 +138,10 @@ div {
 
 /* Styling Links */
 a:visited {
-  color: #fd3c5d;
+  color: #FD3C5D;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
   text-decoration: none;
 }
 
@@ -151,7 +153,7 @@ a:active {
 button {
   border: none;
   font-family: inherit;
-  background-color: #486c96;
+  background-color: #486C96;
   color: white;
   text-decoration: none;
   padding: 17px;
@@ -159,22 +161,17 @@ button {
   border-bottom: 7px solid rgba(0, 0, 0, 0.3);
 }
 
-button:hover {
+button:hover, button:focus {
   cursor: pointer;
-  opacity: 0.8;
-}
-
-button:focus {
-  cursor: pointer;
-  opacity: 0.8;
+  opacity: var(--opacity);
 }
 
 .button__secondary {
   background-color: #e0b354;
-  color: #2b2b2b;
+  color: var(--text-color);
 }
 
-/* Styling Footer */
+/* Styling Footer*/
 .page-footer {
   clear: both;
   display: -webkit-box;
@@ -187,7 +184,7 @@ button:focus {
   text-align: center;
 }
 
-/* Media Queries */
+/* Media Queries*/
 @media all and (max-width: 500px) {
   .grid {
     -ms-grid-columns: 1fr;
@@ -218,98 +215,20 @@ button:focus {
 }
 
 /* Button new Advanced */
-button {
+button,
+.button1,
+.button2,
+.button3,
+.my-input {}
+
+.button, button {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: #357b70;
+  background-color: var(--primary-color);
   color: white;
   text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  -webkit-transition: 0.2s opacity;
-  -o-transition: 0.2s opacity;
-  transition: 0.2s opacity;
-}
-.button1 {
-  border: none;
-  display: inline-block;
-  font-family: inherit;
-  background-color: #357b70;
-  color: white;
-  text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  -webkit-transition: 0.2s opacity;
-  -o-transition: 0.2s opacity;
-  transition: 0.2s opacity;
-}
-.button2 {
-  border: none;
-  display: inline-block;
-  font-family: inherit;
-  background-color: #357b70;
-  color: white;
-  text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  -webkit-transition: 0.2s opacity;
-  -o-transition: 0.2s opacity;
-  transition: 0.2s opacity;
-}
-.button3 {
-  border: none;
-  display: inline-block;
-  font-family: inherit;
-  background-color: #357b70;
-  color: white;
-  text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  -webkit-transition: 0.2s opacity;
-  -o-transition: 0.2s opacity;
-  transition: 0.2s opacity;
-}
-.my-input {
-  border: none;
-  display: inline-block;
-  font-family: inherit;
-  background-color: #357b70;
-  color: white;
-  text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  -webkit-transition: 0.2s opacity;
-  -o-transition: 0.2s opacity;
-  transition: 0.2s opacity;
-}
-.button {
-  border: none;
-  display: inline-block;
-  font-family: inherit;
-  background-color: #357b70;
-  color: white;
-  text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  -webkit-transition: 0.2s opacity;
-  -o-transition: 0.2s opacity;
-  transition: 0.2s opacity;
-}
-.button {
-  border: none;
-  display: inline-block;
-  font-family: inherit;
-  background-color: #357b70;
-  color: white;
-  text-decoration: none;
-  padding: 10px;
+  padding: var(--padding);
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: 0.2s opacity;
@@ -317,24 +236,12 @@ button {
   transition: 0.2s opacity;
 }
 
-button:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-button:focus {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-.button:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
+button:hover,
+button:focus,
+.button:hover,
 .button:focus {
   cursor: pointer;
-  opacity: 0.8;
+  opacity: var(--opacity);
 }
 
 @-webkit-keyframes color-change {
