--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ Text Color (Dark Gray): #2b2b2b;
 :root {
   --primary-color: #357b70;
   --secondary-color: #e0b354;
-  --text-color: #2b2b2b;
+  --text-color: #2B2B2B;
   --h1-font-size: 30px;
   --h2-font-size: 24px;
   --h3-font-size: 24px;
@@ -29,7 +29,6 @@ body {
   font-weight: var(--font-weight);
   font-size: var(--font-size);
   line-height: var(--line-height);
-  width: 100%;
 }
 
 h1 {
@@ -45,19 +44,6 @@ h2 {
 h3 {
   font-size: var(--h3-font-size);
   font-weight: var(--h-font-weight);
-}
-
-body {
-  text-align: center;
-}
-
-div {
-  text-align: left;
-}
-
-.centeredtable {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .profile__text {
@@ -88,6 +74,11 @@ div {
   text-align: center;
 }
 
+.centeredtable {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .profile {
   max-width: 700px;
   margin: 0 auto;
@@ -110,7 +101,7 @@ div {
   margin-left: 15px;
 }
 
-/* Styling CSS Grid */
+/* Styling CSS Grid*/
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -120,6 +111,7 @@ div {
 .grid__item {
   background-color: Lightgrey;
   padding: var(--padding);
+  /* Set width to auto*/
   width: auto;
 }
 
@@ -128,7 +120,7 @@ div {
   grid-row: 1 / 3;
 }
 
-/* Grid fallback */
+/* Grid fallback*/
 .grid__item {
   display: inline-block;
   width: auto;
@@ -136,11 +128,10 @@ div {
 
 /* Styling Links */
 a:visited {
-  color: #fd3c5d;
+  color: #FD3C5D;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
   text-decoration: none;
 }
 
@@ -152,7 +143,7 @@ a:active {
 button {
   border: none;
   font-family: inherit;
-  background-color: #486c96;
+  background-color: #486C96;
   color: white;
   text-decoration: none;
   padding: 17px;
@@ -160,8 +151,7 @@ button {
   border-bottom: 7px solid rgba(0, 0, 0, 0.3);
 }
 
-button:hover,
-button:focus {
+button:hover, button:focus {
   cursor: pointer;
   opacity: var(--opacity);
 }
@@ -171,7 +161,7 @@ button:focus {
   color: var(--text-color);
 }
 
-/* Styling Footer */
+/* Styling Footer*/
 .page-footer {
   clear: both;
   display: flex;
@@ -179,7 +169,7 @@ button:focus {
   text-align: center;
 }
 
-/* Media Queries */
+/* Media Queries*/
 @media all and (max-width: 500px) {
   .grid {
     grid-template-columns: 1fr;
@@ -212,9 +202,9 @@ button,
 .button1,
 .button2,
 .button3,
-.my-input,
-.button,
-.button {
+.my-input {}
+
+.button, button {
   border: none;
   display: inline-block;
   font-family: inherit;
