--- a/css/style.production.css
+++ b/css/style.production.css
@@ -7,7 +7,7 @@ Text Color (Dark Gray): #2b2b2b;
 :root {
   --primary-color: #357b70;
   --secondary-color: #e0b354;
-  --text-color: #2B2B2B;
+  --text-color: #2b2b2b;
   --h1-font-size: 30px;
   --h2-font-size: 24px;
   --h3-font-size: 24px;
@@ -49,11 +49,10 @@ h3 {
 
 .profile__text {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 100px;
-          flex: 1 1 100px;
+  -ms-flex: 1 1 100px;
+  flex: 1 1 100px;
 }
 
-/* Styling Header*/
 .page-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -65,15 +64,20 @@ h3 {
 
 .page-header__item {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 200px;
-          flex: 0 1 200px;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .page-header .page-header__item:last-child {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: right;
+}
+
+.centeredtable {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .about {
@@ -106,7 +110,6 @@ h3 {
   margin-left: 15px;
 }
 
-/* Styling CSS Grid*/
 .grid {
   display: -ms-grid;
   display: grid;
@@ -118,7 +121,6 @@ h3 {
 .grid__item {
   background-color: Lightgrey;
   padding: var(--padding);
-  /* Set width to auto*/
   width: auto;
 }
 
@@ -130,7 +132,6 @@ h3 {
   grid-row: 1 / 3;
 }
 
-/* Grid fallback*/
 .grid__item {
   display: inline-block;
   width: auto;
@@ -138,10 +139,11 @@ h3 {
 
 /* Styling Links */
 a:visited {
-  color: #FD3C5D;
+  color: #fd3c5d;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
 }
 
@@ -153,7 +155,7 @@ a:active {
 button {
   border: none;
   font-family: inherit;
-  background-color: #486C96;
+  background-color: #486c96;
   color: white;
   text-decoration: none;
   padding: 17px;
@@ -161,7 +163,8 @@ button {
   border-bottom: 7px solid rgba(0, 0, 0, 0.3);
 }
 
-button:hover, button:focus {
+button:hover,
+button:focus {
   cursor: pointer;
   opacity: var(--opacity);
 }
@@ -171,7 +174,6 @@ button:hover, button:focus {
   color: var(--text-color);
 }
 
-/* Styling Footer*/
 .page-footer {
   clear: both;
   display: -webkit-box;
@@ -179,12 +181,11 @@ button:hover, button:focus {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
 
-/* Media Queries*/
 @media all and (max-width: 500px) {
   .grid {
     -ms-grid-columns: 1fr;
@@ -221,7 +222,8 @@ button,
 .button3,
 .my-input {}
 
-.button, button {
+.button,
+button {
   border: none;
   display: inline-block;
   font-family: inherit;
@@ -275,62 +277,62 @@ button:focus,
 @-webkit-keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
 
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
 
 @keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
 
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
 
 .sun {
   -webkit-animation: 4s color-change infinite alternate linear;
-          animation: 4s color-change infinite alternate linear;
+  animation: 4s color-change infinite alternate linear;
 }
 
 .cloud-front {
   -webkit-animation: 30s cloud-move infinite alternate linear;
-          animation: 30s cloud-move infinite alternate linear;
+  animation: 30s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
 
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
 
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-          animation: 34s cloud-move-reverse infinite alternate linear;
+  animation: 34s cloud-move-reverse infinite alternate linear;
 }
